# VibeTrading

./: README.md  pyproject.toml
configs/: project.toml
docs/: data-fetching.md  longer-term-baseline.md
docs/qa/: codebase-audit-checklist.md  codebase-audit-report.md  fix-backlog.md  qa-pass-2-summary.md
docs/reference/: artifact-layout.md  cli-commands.md
src/trader/: cli.py
src/trader/baseline/: backtest_baseline.py  train_baseline.py
src/trader/data/: __init__.py  binance_aggtrades.py  registry.py  storage.py
src/trader/features/: feature_builder.py
src/trader/labels/: label_builder.py
src/vibetrading/: __init__.py
tests/: test_binance_aggtrades_parser.py  test_qa_regressions.py
tests/data/: aggtrades_malformed.csv  aggtrades_no_header.csv  aggtrades_with_header.csv
